<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/et_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_reg_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/password_confirmation_hint"
        android:inputType="textPassword"
        android:padding="8dp" />

    <ImageButton
        android:id="@+id/button_signup"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/sign_up"
        android:onClick="signUp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        android:background="@drawable/back"
        android:onClick="goBack2Login" />

</FrameLayout>